# evm4eosio-demo

./: .gitignore  GeneralStateTestsRunner.py  README.md  demo.ipynb  evm.py  evm_test.py  greeter.sol  init.py  testnet-init.py  testsrunner.py
contracts/ethereum_vm/: ethereum_vm.abi  ethereum_vm.wasm  evmtest.abi  evmtest.wasm
ethereum_vm/: CMakeLists.txt  eth_account.cpp  eth_account.hpp  ethereum_vm.abi  ethereum_vm.cpp  ethereum_vm.wasm
sol/: greeter.sol  tester.sol
